Use correct project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Likowo.github.io/portfolioreactapp",
+  "homepage": "https://Likowo.github.io/MyPortfolio_ReactApp",
   "name": "portfolioreactapp",
   "version": "0.1.0",
   "private": true,
