--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolioreactapp",
   "version": "0.1.0",
-  "homepage": "https://Likowo.github.io/MyPortfolio_ReactApp",
+  "homepage": "https://likowo.github.io/MyPortfolio_ReactApp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
